# chatbot_agentic

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
core/: settings.py
notebooks/: 00_setup_openrouter.ipynb  01_lcel_runnables.ipynb  02_retrieval_rag_offline.ipynb  03_tools_agents_memory.ipynb  README.md
openai_compat/: responses.py  router.py  schemas.py  service.py  utils.py
server/: app.py
server/openai_compat/: responses.py  router.py  service.py  tool_blocks.py
server/services/: agent.py
server/tools/: math_tool.py
services/: agent.py
tools/: weather_tool.py
