[project]
name = "langchain-notebooks"
version = "0.1.0"
description = "LangChain core concepts notebooks (OpenRouter)"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0",
  "langchain-core>=0.3",
  "langgraph>=1.1",
  "langchain-community>=0.3",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "langchain-openai>=1.2.2",
]

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
extend-exclude = [
  ".venv",
  "notebooks",
]
